# beerpong_table

./: .gitignore  README.md  SensorController.h
EC/App/BeerpongEmbeddedController/: .cproject  .project  BeerpongEmbeddedController.ino  sloeber.ino.cpp
EC/App/LightController/src/: LightController.cpp  LightController.h
EC/App/Logger/src/: Logger.cpp  Logger.h
EC/App/NetworkController/src/: NetworkComm.cpp
EC/App/SensorController/src/: SensorController.cpp  SensorController.h
EC/App/SerialInputReader/src/: sn74hc165.h
EC/App/SystemController/src/: SystemController.cpp  SystemController.h
EC/main/: main.ino
EC/main/FarsBoardLEDTest/: FarsBoardLEDTest.ino
EC/main/FarsUnoTest/: .cproject  .project  FarsUnoTest.ino  sloeber.ino.cpp
EC/main/UnitTest/: .cproject  .project  BjConfiguration.h  BjDataPackage.cpp  BjDataPackage.h  BjDataPackageDefines.h  IRestController.h  LightController.cpp  LightController.h  SensorController.cpp  SensorController.h  SystemController.cpp  SystemController.h  UnitController.cpp  UnitController.h  UnitTest.ino  bob.cpp  sloeber.ino.cpp
EC/main/UnitTest/gtest/: .gitignore  BjDataPackage.d  LightController.d  SensorController.d  SystemController.d  bob.d  (+3 more)
EC/main/sketch_apr30a/: sketch_apr30a.ino
EC/main/sketch_dec16a/: sketch_dec16a.ino
EC/main/sketch_dec16b/: sketch_dec16b.ino
EC/main/sketch_dec28a/: sketch_dec28a.ino
EC/main/test/: test.ino
EC/main/unit_tests.cpp/: .cproject  .project
GeneralDocs/: ProtocolDiagram.xml
MC/App/: .cproject  .project
MC/App/src/: main.cpp
pca9865_driver/: PCA9685RPi.h
pca9865_driver/pca9865_driver/: CMakeLists.txt
pca9865_driver/pca9865_driver/include/: PCA9685RPi.h
pca9865_driver/pca9865_driver/src/: PCA9685RPi.c  PCA9865RPi.c  main.c
segment7_controller/: CMakeLists.txt
segment7_controller/include/: segment7_controller.h  segment7_controller.h.save
segment7_controller/src/: main.c  segment7_controller.c
sn74hc165_driver/: CMakeLists.txt
sn74hc165_driver/src/: main.c  sn74hc165.c  sn74hc165.h  sn74hc165.os
sn74hc595_driver/: CMakeLists.txt
sn74hc595_driver/include/: sn74hc595.h  sn75hc595.h
sn74hc595_driver/src/: main.c  sn74hc595.c  sn75hc595.c
sn74hc595_driver2/src/: main.c  sn74hc595.c  test.c
(+64 files in other folders)
